# OverFlight

./: .gitignore  LICENSE  README.md  TODO.md  customQtWindow.py  main.py  pyproject.toml  settings.json  settings.yaml
Data/AircraftClassifications/: AircraftClassifications.json
Data/aircraft-classifications/: AircraftClassifications.csv
Scripts/: CustomQtWindow.py  HandlingOpenSkyStates.py  ManagingWindows.py  Mover.py  StateFilter.py  WindowTracker.py  WindowTrackerConfig.py  WindowTrackerRunner.py  customQtWindow.py  main.py  managingWindows.py  platformOs.py
Scripts/Utils/: Helpers.py  LoggingUtils.py  OpenSkyUtils.py  PlatformUtils.py  QtUtils.py  TypeHints.py
Settings/: settings.json  userDefinedTrackerSettings.json
data/: icao_8643.csv
src/: AirTrafficController.py  ApiHandler.py  CustomQtWindow.py  Mover.py  Settings.py  StateFilter.py  WindowTracker.py  WindowTrackerConfig.py  WindowTrackerRunner.py  main.py  scratch.py
src/utils/: AircraftRecord.py  GetAircraftClassifications.py  ICAO_8643.py  Icao8643Utils.py  LoggingUtils.py  OpenSkyUtils.py  PlatformUtils.py  QtUtils.py
