[project]
name = "overflight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "geopy>=2.4.1",
    "html5lib>=1.1",
    "lxml>=6.0.2",
    "opensky-api",
    "pandas>=3.0.2",
    "pyside6>=6.11.1",
]

[tool.uv.sources]
opensky-api = { git = "https://github.com/openskynetwork/opensky-api.git", subdirectory = "python" }
