[project]
name = "overflight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flightradarapi>=1.5.1",
    "geopy>=2.4.1",
    "opensky-api",
    "pandas>=3.0.2",
    "pyside6>=6.11.1",
    "wmctrl>=0.5",
]

[tool.uv.sources]
opensky-api = { git = "https://github.com/openskynetwork/opensky-api.git", subdirectory = "python" }
